<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
  <LinearLayout
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_weight="1">
      <ImageView
      		android:layout_width="150dip"
			android:layout_height="150dip"
			android:layout_margin="10dip"
			android:layout_gravity="center"
			android:gravity="center"
			android:scaleType="fitXY"
			android:src="@drawable/sukey_head"/>
  </LinearLayout>
        
  <LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1">
<TextView
        android:text="@string/tagline"
        android:textSize="13dip"       
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <TextView
        android:text="@string/support"
        android:textSize="13dip"
		android:linksClickable="false"
		android:focusable="true"
		android:clickable="true"
		android:onClick="support"         
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <TextView
        android:text="@string/website"
        android:textSize="13dip"
		android:linksClickable="false"
		android:focusable="true"
		android:clickable="true"
		android:onClick="website"        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <TextView
        android:text="@string/facebook"
        android:textSize="13dip"
		android:linksClickable="false"
		android:focusable="true"
		android:clickable="true"
		android:onClick="facebook"        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
    <TextView
        android:text="@string/twitter"
        android:textSize="13dip"
		android:linksClickable="false"
		android:focusable="true"
		android:clickable="true"
		android:onClick="twitter"        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>        
  </LinearLayout>
</LinearLayout>